--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,9 @@ h3 {
   background-color: #2e2f42;
   padding: 188px 0;
   text-align: center;
+  max-width: 1440px;
+  width: 100%;
+  background-image: linear-gradient(rgba(14, 47, 66, 0.7)), url();
 }
 .title {
   font-weight: 700;
@@ -225,6 +228,8 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: block;
+  display: flex;
 }
 
 p {
@@ -233,6 +238,8 @@ p {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-wrap {
