--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,17 @@ h3 {
   color: #404bbf;
 }
 
+.current::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+}
+
 .contact-link {
   font-weight: 400;
   line-height: 1.5;
@@ -87,7 +98,12 @@ h3 {
   text-align: center;
   max-width: 1440px;
   width: 100%;
-  background-image: linear-gradient(rgba(14, 47, 66, 0.7)), url();
+  background-image: linear-gradient(rgba(14, 47, 66, 0.7)),
+    url("../images/people-office.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: auto;
 }
 .title {
   font-weight: 700;
@@ -183,6 +199,8 @@ h3 {
 .card {
   background-color: #fff;
   border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .person-list {
@@ -263,6 +281,11 @@ p {
   text-align: center;
 }
 
+.socials-circle {
+  width: 40px;
+  height: 40px;
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -270,8 +293,18 @@ p {
   column-gap: 24px;
 }
 
+.socials-link-footer:focus,
+.socials-link-footer:hover {
+  background-color: #404bbf;
+}
+
+.socials-logo {
+  fill: #f4f4fd;
+}
+
 .portfolio-card {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .item-portfolio {
@@ -279,6 +312,11 @@ p {
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
   padding: 32px 16px;
+}
+
+.portfolio-card:hover .overlay,
+.portfolio-card:focus .overlay {
+  transform: translate(0);
 }
 
 .category {
@@ -315,4 +353,36 @@ p {
 .footer .logo {
   display: inline-block;
   margin-bottom: 16px;
+}
+
+.text-social {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.socials-list-footer {
+  gap: 16px;
+}
+
+.socials-link-footer {
+  width: 100%;
+  height: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.socials-link-footer:hover,
+.socials-link-footer:focus {
+  background-color: #31d0aa;
+}
+
+.socials-icon {
+  fill: #f4f4fd;
 }
