--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ h3 {
   margin: 0 auto;
 }
 
+p {
+  margin: 0;
+}
+
 .container {
   width: 1158px;
   margin: 0 auto;
@@ -48,10 +52,16 @@ h3 {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
 .link:focus {
+  color: #404bbf;
+}
+
+.current {
+  position: relative;
   color: #404bbf;
 }
 
@@ -72,6 +82,7 @@ h3 {
   text-decoration: none;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:hover,
 .contact-link:focus {
@@ -105,6 +116,7 @@ h3 {
   background-position: center;
   margin: auto;
 }
+
 .title {
   font-weight: 700;
   font-size: 56px;
@@ -131,7 +143,9 @@ h3 {
   border-radius: 4px;
   height: 56px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .button:hover,
 .button:focus {
   background: #404bbf;
@@ -148,6 +162,17 @@ h3 {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.icons-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  height: 112px;
+  margin-bottom: 8px;
 }
 
 .goals-column {
@@ -204,12 +229,11 @@ h3 {
 }
 
 .person-list {
-  display: flex;
   gap: 24px;
 }
 
 .person-description {
-  padding: 32px 0;
+  padding: 32px 0px;
 }
 
 .person {
@@ -279,11 +303,18 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .socials-circle {
   width: 40px;
   height: 40px;
+}
+
+.socials-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 
 .portfolio-list {
@@ -302,6 +333,17 @@ p {
   fill: #f4f4fd;
 }
 
+.socials-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-card {
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -316,7 +358,33 @@ p {
 
 .portfolio-card:hover .overlay,
 .portfolio-card:focus .overlay {
-  transform: translate(0);
+  transform: translateY(0);
+}
+
+.portfolio-card:hover,
+.portfolio-card:focus {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.trans-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .category {
