--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ p {
 .socials-link {
   width: 100%;
   height: 100%;
-  background-color: #4d5ae5;
+  background-color: #404bbf;
   border-radius: 50%;
   display: flex;
   align-items: center;
